# rag-multimodal-semantic-chunking

./: .env.sample  .gitignore  README.md  doc_intelli.py  doc_intelli_workflow.py  doc_intelli_workflow_basic.py  doc_model.py  doc_proc_aoai.py  doc_proc_chunk.py  doc_proc_img.py  doc_proc_md.py  pyproject.toml
actor/: aoai_img_desc_processor.py  content_chunker.py  data_process_model.py  markdown_processor.py  pdf_img_processor.py  table_processor.py
actor_basic/: content_chunker.py  data_process_model.py  markdown_processor.py
output/: chunks_contents.json  chunks_recursive.json  contoso_chunks.json  contoso_figure_descriptions.json  contoso_output.json  contoso_raw.md  contoso_tables.xlsx  contoso_updated.md
